Grammar/VBGParser.java
// Generated from VBG.g4 by ANTLR 4.9.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VBGParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		BOOL=39, STRING=40, WS=41, COM=42;
	public static final int
		RULE_soubor = 0, RULE_vyraz = 1, RULE_porovnej = 2, RULE_konecPorovnej = 3, 
		RULE_vyrazPorovnej = 4, RULE_plus = 5, RULE_konecPlus = 6, RULE_vyrazPlus = 7, 
		RULE_krat = 8, RULE_konecKrat = 9, RULE_vyrazKrat = 10, RULE_mocnina = 11, 
		RULE_konecMocnina = 12, RULE_vyrazMocnina = 13, RULE_type = 14, RULE_number = 15, 
		RULE_integer = 16, RULE_signed = 17, RULE_unsigned = 18, RULE_decimal = 19, 
		RULE_hexa = 20, RULE_binary = 21, RULE_nonz = 22, RULE_digit = 23, RULE_hexnz = 24, 
		RULE_hexdigit = 25, RULE_flt = 26, RULE_bool = 27, RULE_string = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"soubor", "vyraz", "porovnej", "konecPorovnej", "vyrazPorovnej", "plus", 
			"konecPlus", "vyrazPlus", "krat", "konecKrat", "vyrazKrat", "mocnina", 
			"konecMocnina", "vyrazMocnina", "type", "number", "integer", "signed", 
			"unsigned", "decimal", "hexa", "binary", "nonz", "digit", "hexnz", "hexdigit", 
			"flt", "bool", "string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\n'", "'<'", "'>'", "'=='", "'<='", "'>='", "'('", "')'", "'+'", 
			"'*'", "'^'", "'-'", "'h'", "'b'", "'0'", "'1'", "'_'", "'2'", "'3'", 
			"'4'", "'5'", "'6'", "'7'", "'8'", "'9'", "'a'", "'c'", "'d'", "'e'", 
			"'f'", "'A'", "'B'", "'C'", "'D'", "'E'", "'F'", "'.'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "BOOL", "STRING", "WS", "COM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "VBG.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VBGParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SouborContext extends ParserRuleContext {
		public List<VyrazContext> vyraz() {
			return getRuleContexts(VyrazContext.class);
		}
		public VyrazContext vyraz(int i) {
			return getRuleContext(VyrazContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public SouborContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_soubor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterSoubor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitSoubor(this);
		}
	}

	public final SouborContext soubor() throws RecognitionException {
		SouborContext _localctx = new SouborContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_soubor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(61);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(58);
					vyraz();
					}
					break;
				case 2:
					{
					setState(59);
					match(T__0);
					}
					break;
				case 3:
					{
					setState(60);
					type();
					}
					break;
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__6) | (1L << T__8) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__36) | (1L << T__37) | (1L << BOOL) | (1L << STRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VyrazContext extends ParserRuleContext {
		public PlusContext plus() {
			return getRuleContext(PlusContext.class,0);
		}
		public KratContext krat() {
			return getRuleContext(KratContext.class,0);
		}
		public MocninaContext mocnina() {
			return getRuleContext(MocninaContext.class,0);
		}
		public PorovnejContext porovnej() {
			return getRuleContext(PorovnejContext.class,0);
		}
		public VyrazContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vyraz; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterVyraz(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitVyraz(this);
		}
	}

	public final VyrazContext vyraz() throws RecognitionException {
		VyrazContext _localctx = new VyrazContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_vyraz);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(65);
				plus();
				}
				break;
			case 2:
				{
				setState(66);
				krat();
				}
				break;
			case 3:
				{
				setState(67);
				mocnina();
				}
				break;
			case 4:
				{
				setState(68);
				porovnej();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PorovnejContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<KonecPorovnejContext> konecPorovnej() {
			return getRuleContexts(KonecPorovnejContext.class);
		}
		public KonecPorovnejContext konecPorovnej(int i) {
			return getRuleContext(KonecPorovnejContext.class,i);
		}
		public PorovnejContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_porovnej; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterPorovnej(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitPorovnej(this);
		}
	}

	public final PorovnejContext porovnej() throws RecognitionException {
		PorovnejContext _localctx = new PorovnejContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_porovnej);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			type();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5))) != 0)) {
				{
				{
				setState(72);
				konecPorovnej();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KonecPorovnejContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public KonecPorovnejContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_konecPorovnej; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterKonecPorovnej(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitKonecPorovnej(this);
		}
	}

	public final KonecPorovnejContext konecPorovnej() throws RecognitionException {
		KonecPorovnejContext _localctx = new KonecPorovnejContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_konecPorovnej);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(79);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VyrazPorovnejContext extends ParserRuleContext {
		public PorovnejContext porovnej() {
			return getRuleContext(PorovnejContext.class,0);
		}
		public VyrazPorovnejContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vyrazPorovnej; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterVyrazPorovnej(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitVyrazPorovnej(this);
		}
	}

	public final VyrazPorovnejContext vyrazPorovnej() throws RecognitionException {
		VyrazPorovnejContext _localctx = new VyrazPorovnejContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vyrazPorovnej);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__6);
			setState(82);
			porovnej();
			setState(83);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlusContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<KonecPlusContext> konecPlus() {
			return getRuleContexts(KonecPlusContext.class);
		}
		public KonecPlusContext konecPlus(int i) {
			return getRuleContext(KonecPlusContext.class,i);
		}
		public PlusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterPlus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitPlus(this);
		}
	}

	public final PlusContext plus() throws RecognitionException {
		PlusContext _localctx = new PlusContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_plus);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			type();
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(86);
					konecPlus();
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KonecPlusContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public KonecPlusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_konecPlus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterKonecPlus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitKonecPlus(this);
		}
	}

	public final KonecPlusContext konecPlus() throws RecognitionException {
		KonecPlusContext _localctx = new KonecPlusContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_konecPlus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__8);
			setState(93);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VyrazPlusContext extends ParserRuleContext {
		public PlusContext plus() {
			return getRuleContext(PlusContext.class,0);
		}
		public VyrazPlusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vyrazPlus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterVyrazPlus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitVyrazPlus(this);
		}
	}

	public final VyrazPlusContext vyrazPlus() throws RecognitionException {
		VyrazPlusContext _localctx = new VyrazPlusContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vyrazPlus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__6);
			setState(96);
			plus();
			setState(97);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KratContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VyrazPlusContext vyrazPlus() {
			return getRuleContext(VyrazPlusContext.class,0);
		}
		public List<KonecKratContext> konecKrat() {
			return getRuleContexts(KonecKratContext.class);
		}
		public KonecKratContext konecKrat(int i) {
			return getRuleContext(KonecKratContext.class,i);
		}
		public KratContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_krat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterKrat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitKrat(this);
		}
	}

	public final KratContext krat() throws RecognitionException {
		KratContext _localctx = new KratContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_krat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__36:
			case T__37:
			case BOOL:
			case STRING:
				{
				setState(99);
				type();
				}
				break;
			case T__6:
				{
				setState(100);
				vyrazPlus();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(103);
				konecKrat();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KonecKratContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VyrazPlusContext vyrazPlus() {
			return getRuleContext(VyrazPlusContext.class,0);
		}
		public KonecKratContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_konecKrat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterKonecKrat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitKonecKrat(this);
		}
	}

	public final KonecKratContext konecKrat() throws RecognitionException {
		KonecKratContext _localctx = new KonecKratContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_konecKrat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(T__9);
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__36:
			case T__37:
			case BOOL:
			case STRING:
				{
				setState(110);
				type();
				}
				break;
			case T__6:
				{
				setState(111);
				vyrazPlus();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VyrazKratContext extends ParserRuleContext {
		public KratContext krat() {
			return getRuleContext(KratContext.class,0);
		}
		public VyrazKratContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vyrazKrat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterVyrazKrat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitVyrazKrat(this);
		}
	}

	public final VyrazKratContext vyrazKrat() throws RecognitionException {
		VyrazKratContext _localctx = new VyrazKratContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_vyrazKrat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__6);
			setState(115);
			krat();
			setState(116);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MocninaContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VyrazPlusContext vyrazPlus() {
			return getRuleContext(VyrazPlusContext.class,0);
		}
		public VyrazKratContext vyrazKrat() {
			return getRuleContext(VyrazKratContext.class,0);
		}
		public List<KonecMocninaContext> konecMocnina() {
			return getRuleContexts(KonecMocninaContext.class);
		}
		public KonecMocninaContext konecMocnina(int i) {
			return getRuleContext(KonecMocninaContext.class,i);
		}
		public MocninaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mocnina; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterMocnina(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitMocnina(this);
		}
	}

	public final MocninaContext mocnina() throws RecognitionException {
		MocninaContext _localctx = new MocninaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mocnina);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(118);
				type();
				}
				break;
			case 2:
				{
				setState(119);
				vyrazPlus();
				}
				break;
			case 3:
				{
				setState(120);
				vyrazKrat();
				}
				break;
			}
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(123);
				konecMocnina();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KonecMocninaContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VyrazPlusContext vyrazPlus() {
			return getRuleContext(VyrazPlusContext.class,0);
		}
		public VyrazKratContext vyrazKrat() {
			return getRuleContext(VyrazKratContext.class,0);
		}
		public KonecMocninaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_konecMocnina; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterKonecMocnina(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitKonecMocnina(this);
		}
	}

	public final KonecMocninaContext konecMocnina() throws RecognitionException {
		KonecMocninaContext _localctx = new KonecMocninaContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_konecMocnina);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(T__10);
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(130);
				type();
				}
				break;
			case 2:
				{
				setState(131);
				vyrazPlus();
				}
				break;
			case 3:
				{
				setState(132);
				vyrazKrat();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VyrazMocninaContext extends ParserRuleContext {
		public MocninaContext mocnina() {
			return getRuleContext(MocninaContext.class,0);
		}
		public VyrazMocninaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vyrazMocnina; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterVyrazMocnina(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitVyrazMocnina(this);
		}
	}

	public final VyrazMocninaContext vyrazMocnina() throws RecognitionException {
		VyrazMocninaContext _localctx = new VyrazMocninaContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_vyrazMocnina);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(T__6);
			setState(136);
			mocnina();
			setState(137);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_type);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__36:
			case T__37:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				number();
				}
				break;
			case BOOL:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				bool();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(141);
				string();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public FltContext flt() {
			return getRuleContext(FltContext.class,0);
		}
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_number);
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				integer();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(145);
				flt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntegerContext extends ParserRuleContext {
		public SignedContext signed() {
			return getRuleContext(SignedContext.class,0);
		}
		public UnsignedContext unsigned() {
			return getRuleContext(UnsignedContext.class,0);
		}
		public IntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).enterInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VBGListener ) ((VBGListener)listener).exitInteger(this);
		}
	}
